<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rayhahah.easyhttp.MainActivity">

    <Button
        android:id="@+id/mInitClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_client"
        android:textAllCaps="false"/>


    <Button
        android:id="@+id/mGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mPut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/put_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_request"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mPostFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_file"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mPostListFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_list_file"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/mDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dowload_file"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/mTvTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="hello"
        android:textSize="20sp"/>

</LinearLayout>
